--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ Index:
 </head>
 
 <body>
-    <header>EDUCAÇÃO FINANCEIRA</header>
+    <header>MUSICA</header>
 
     <section>
         <div class="chamada-texto">
-            <h1>Investimentos de renda fixa ou variável?</h1>
+            <h1>musicas para festa eletrônica?</h1>
             <p>Dicas de como escolher!!</p>
         </div>
 
@@ -22,3 +22,21 @@ Index:
 </body>
 
 </html>
+🔊 Experience INAMAR’s DJ Mix 2024: A mesmerizing hour of the best Melodic Techno, recorded in the lush landscapes of Cari, Molare, Ticino, where INAMAR first found her musical inspiration.
+This set not only premieres her new track "INAMAR - A Million Stars," but also features "Midnight Echoes," a favorite played and playlisted by David Guetta!
+
+🌟 Tracklist:
+
+00:00 INAMAR - A Million Stars
+04:50 INAMAR - Sky Is The Limit
+09:00 Levasseur - Craving
+13:30 Aperture - Arrival
+18:50 Andrea Terramossi - The Wheel of Time
+24:20 Kiras - Reflection
+27:30 Delayz, Jake Silva & Frankie Sims - Over You
+30:50 Héroïde - Joël Fabrice
+34:10 INAMAR - Midnight Echoes
+38:25 Eric Sharp - Red Room
+42:05 Istar Project - Celeste
+47:10 INAMAR - Dolce Vita
+50:50 Marc Van Linden, Symmetic & Nedrok - Panorama
